--- a/golang/cmd/web/templates/homepage.html.tmpl
+++ b/golang/cmd/web/templates/homepage.html.tmpl
@@ -7,8 +7,10 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-gnJ2xL1RvCmLfsW/6uyTzglB9PbBnQ2mT1TmDw/Wsrxs6vMKZCrpL8bXzE06M1NM" crossorigin="anonymous">
   <!-- Custom CSS -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
+      font-family: 'Roboto', sans-serif;
       background: linear-gradient(90deg, #21094e, #430e7e, #640fa6, #7d00c3, #8e00c9);
     }
 
